tests/error/comprehension_errors/capture2.err
Guppy compilation failed. Error in file $FILE:18

16:    @guppy(module)
17:    def foo(xs: list[int], q: qubit) -> list[int]:
18:        return [x for x in xs if bar(q)]
                                        ^
GuppyTypeError: Variable `q` with linear type `qubit` would be used multiple times when evaluating this comprehension
